--- a/etc/portage/make.conf
+++ b/etc/portage/make.conf
@@ -12,4 +12,4 @@ ACCEPT_LICENSE="-* @FREE @BINARY-REDISTRIBUTABLE"
 
 USE="-systemd -openrc -X -wifi -bluetooth -multilib -gnome -kde minimal"
 
-ROOT="/mnt/minimal/"
+ROOT="/mnt/minimal/initramfs"
